# Trajectory_Optimize_Method_Release

./: CMakeLists.txt  README.md  main.cpp
include/: base_teb_edges.h  kinetic_edge.h  planner_manager.h  velocityEdge.h
src/: planner_manager.cpp
